FINAL UPDATE!
CODE IS ALL DOCUMENTED AND GENERLIZED IM FINNALY DONE!